Sun Jun 12 19:06:23 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (Init_intervm): You cannot free the main VM even when
	  no reference to it remains.

Sun Jun 12 18:54:24 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (InitVM_top_self): This is wrong.  The mark_object_array
	  has already been, and shall be, created in variable.c

Sun Jun 12 18:48:17 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): Now the VM struct is reference
	  counted.  A VM gets destructed once after all other VMs are not
	  pointing to it, or when the wholr process passes away.  Note
	  that we do not offer a way to "transfar" a VM to another so
	  there can be no circular references.

	* vm.c: ditto.

Sun Jun 12 17:03:21 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): Now the VM struct has its status.
	  Much like the status of thread.  This is (or will be) used to
	  manage VMs.

	* intervm.c: ditto.

	* eval.c: ditto.

	* vm.c: ditto.

	* vm_core.h: ditto.

	* vm_method.c: ditto.

Sat Jun 11 17:52:00 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (ruby_vm_destruct): this function might be called
	  inside of a st_foreach call so the st_delete shall be taken care
	  of.

Mon Feb 14 03:34:02 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (join_internal): New function.  RubyVM#join blocks so
	  it shall not hold GVL while it waits other VM.

Thu Feb 10 19:17:27 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ruby.c (proc_options): Instead of strdup (which causes memory
	  leak), let GC terminate those strings.

	* ruby.c (process_options): ditto.

	* ruby.c (moreswitches): ditto.

Thu Feb 10 18:05:55 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (InitVM_Thread): InitVM_native_thread() shall be called
	  for ALL threads, including the main thread.  All other threads
	  except the main one calls this function via rb_thread_create but